# MinexPy

./: .gitignore  AGENTS.md  CHANGELOG.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  MAPPING_WORKFLOW_NOTES.md  MinexPy.py  README.md  __init__.py  build_package.sh  common.py  directory_tree.md  minexpy-structure.md  mkdocs.yml  pyproject.toml  requirements.txt  run_stat_examples.sh  test.py  test_package.sh
.github/workflows/: docs.yml  static.yml
analysis/: __init__.py  correlations.py  stats_analysis.py
app/: __init__.py  correlations.py  fractal_modelling.py  mapping.py  pca.py  standardization.py  stats.py  stats_analysis.py  stats_plots.py  test.py
app/visuals/: __init__.py  interpolation 0.py  interpolation.py  line_fitting.py  mapping 0.py  mapping.py  pca.py  standardization.py  test.py
archives/: Thesis - Yasin Ghasemi - 2.0.1.ipynb
docs/: .gitkeep  index.md  mkdocs.yml  requirements.txt
docs/api/: index.md  mapping.md  statistics.md
docs/examples/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/research-notes/: index.md  mapping-foundations.md  statistical-foundations.md
docs/user-guide/: correlation-analysis.md  geochemical-mapping.md  overview.md  statistical-analysis.md  statistical-visualization.md
docs/user-guide/data/: demo_data.csv
minexpy/: __init__.py  cli.py  correlation.py  stats.py  statviz.py
minexpy/mapping/: __init__.py  dataloader.py  gridding.py  interpolation.py  viz.py
tests/: test_mapping_viz_smoke.py
utils/: __init__.py  config.py  database_utils.py
